fixed text overflow on blog aside section

--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -202,6 +202,18 @@ $secondary: 'Tulpen One', cursive;
         font-size: 27px;
     }
 
+
+    @media (max-width: 1370px) {
+        aside {
+            div {
+                width: 100%;
+                max-height: 1000px;
+                height: 710px;
+            }
+        }
+
+    }
+
     /* Portrait tablet and small desktops */
     @media (max-width: 940px) {
 
